--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "10up/async-transients": "dev-master"
     }
 }
