--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     {
         "format": "compressed",
         "extensionName": ".css",
-        "savePath": "/dist/cs"
+        "savePath": "/dist/css"
     },
   ],
   "liveSassCompile.settings.generateMap": false
